--- a/index.html
+++ b/index.html
@@ -29,11 +29,8 @@
       <main id="projects">
         <div class="recipe a">
           <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/image-1.png" />
-          <h2>CHOCOLATE MOUSSE</h2>
-          <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/time.svg" class="time" />
-          <p class="mins">20 mins</p>
-          <p class="description">
-            This delicious chocolate mousse will delight dinner guests of all ages!</p>
+          <h2>Your blog post title</h2>
+          <p class="description">An appealing description of <a href="linktoyourpost.com">your post</a>. Create that "itch" to click we talked about!</p>            
         </div>
         <div class="recipe b">
           <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/image-2.png" />
