--- a/index.html
+++ b/index.html
@@ -27,72 +27,25 @@
       </header>
 
       <main id="projects">
-        <div class="recipe a">
-          <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/image-1.png" />
-          <h2>Your blog post title</h2>
-          <p class="description">An appealing description of <a href="linktoyourpost.com">your post</a>. Create that "itch" to click we talked about!</p>            
+        <div class="Blog Post">
+          <img src="images/xavier_picture.jpg" />
+          <h2>A Secret Gem of a Show: Xavier: Renegade Angel</h2>
+          <p class="description">Are you looking for the next show to watch? Then let's learn about how good XRA is! <a href="https://medium.com/@torrin_37492/a-secret-gem-of-a-show-xavier-renegade-angel-c263d4c6277b">POST</a>. </p>            
         </div>
-        <div class="recipe b">
-          <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/image-2.png" />
-          <h2>SMOKED LAMB WITH RICE</h2>
-          <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/time.svg" class="time" />
-          <p class="mins">120 mins</p>
-          <p class="description">
-            Want to feel like your favorite relative came over and made you dinner? This comfort meal of smoked lamb and rice will quickly become a weekend favorite!
-          </p>
+        <div class="Podcast">
+          <img src="images/spongebob.jpg" />
+          <h2>ENGL Panthers - Podcast</h2>
+          <p class="description">Are you looking for some discussions? Then check out my podcase where you discuss Spongebob's influence on both us and adult cartoons! <a href="https://on.soundcloud.com/Xp18V">PODCAST</a>. </p>            
         </div>
-        <div class="recipe c">
-          <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/image-5.png" />
-          <h2>GOAT CHEESE SALAD</h2>
-          <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/time.svg" class="time" />
-          <p class="mins">25 mins</p>
+        <div class="Video">
+          <img src="images/placeholder.jpeg" />
+          <h2>Video</h2>
           <p class="description">
-            In addition to the full flavor of goat cheese, this salad includes kale, avocado, and farro to balance it out.</p>
-        </div>
-        <div class="recipe d">
-          <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/image-4.png" />
-          <h2>CHICKEN SANDWICH</h2>
-          <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/time.svg" class="time" />
-          <p class="mins">45 mins</p>
-          <p class="description">
-            We've packed a lot into this one - shredded cabbage, carmalized onions, deep-fried chicken, chipotle mayo, half-sour pickles, and a toasted sesame bun will leave you thoroughly satisfied!</p>
-        </div>
-        <div class="recipe e">
-          <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/image-3.png" />
-          <h2>SWEET CHURROS</h2>
-          <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/time.svg" class="time" />
-          <p class="mins">90 mins</p>
-          <p class="description">
-            Making this classic summer treat at home will remind you of a childhood spent in the park.</p>
-        </div>
-        <div class="recipe f">
-          <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/image-6.png" />
-          <h2>BERRY PARFAIT</h2>
-          <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/time.svg" class="time" />
-          <p class="mins">10 mins</p>
-          <p class="description">
-            This low-calorie, vitamin-packed parfait is great for breakfast, dessert, or post-workout!</p>
-        </div>
-        <div class="recipe e">
-          <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/image-3.png" />
-          <h2>SWEET CHURROS</h2>
-          <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/time.svg" class="time" />
-          <p class="mins">90 mins</p>
-          <p class="description">
-            Making this classic summer treat at home will remind you of a childhood spent in the park.</p>
-        </div>
-        <div class="recipe f">
-          <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/image-6.png" />
-          <h2>BERRY PARFAIT</h2>
-          <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/time.svg" class="time" />
-          <p class="mins">10 mins</p>
-          <p class="description">
-            This low-calorie, vitamin-packed parfait is great for breakfast, dessert, or post-workout!</p>
+            This is the placeholder for the video.</p>
         </div>
       </main>
 
       <footer>
-        <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/savory.svg" class="logo">
       </footer>
 
     </div>
