--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <header>
         <div class="wrapper">
           <h1>Torrin Conrath</h1>
-            <p class="bio"> The proper description of myself and my site, I'm learning how to create a website with loads of greats assignments."
+            <p class="bio"> Hello I'm Torrin Conrath! These are my assignments for ENGL 3844! Check then out!"
             </p>
           <div class="buttonBox">
             <a class="myButton" href="#projects">Go</a>
