--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="Podcast">
           <img src="images/spongebob.jpg" />
           <h2>ENGL Panthers - Podcast</h2>
-          <p class="description">Are you looking for some discussions? Then check out my podcase where you discuss Spongebob's influence on both us and adult cartoons! <a href="https://on.soundcloud.com/Xp18V">PODCAST</a>. </p>            
+          <p class="description">Are you looking for some discussions? Then check out my podcast where you discuss Spongebob's influence on both us and adult cartoons! <a href="https://on.soundcloud.com/Xp18V">PODCAST</a>. </p>            
         </div>
         <div class="Video">
           <img src="images/placeholder.jpeg" />
