--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <header>
         <div class="wrapper">
           <h1>Torrin Conrath</h1>
-            <p class="bio"> Hello I'm Torrin Conrath! These are my assignments for ENGL 3844! Check then out!
+            <p class="bio"> Hello I'm Torrin Conrath! These are my assignments for ENGL 3844! Check them out!
             </p>
           <div class="buttonBox">
             <a class="myButton" href="#projects">Go</a>
