--- a/index.html
+++ b/index.html
@@ -29,17 +29,17 @@
 
       <main id="projects">
         <div class="Blog Post">
-          <img src="images/xavier_picture.jpg" />
+          <img src="images/xavier_picture.jpg" alt="Picture of Xavier" />
           <h2>A Secret Gem of a Show: Xavier: Renegade Angel</h2>
           <p class="description">Are you looking for the next show to watch? Then let's learn about how good XRA is! <a href="https://medium.com/@torrin_37492/a-secret-gem-of-a-show-xavier-renegade-angel-c263d4c6277b">POST</a>. </p>            
         </div>
         <div class="Podcast">
-          <img src="images/spongebob.jpg" />
+          <img src="images/spongebob.jpg" alt="Picture of Spongebob" />
           <h2>ENGL Panthers - Podcast</h2>
           <p class="description">Are you looking for some discussions? Then check out my podcast where you discuss Spongebob's influence on both us and adult cartoons! <a href="https://on.soundcloud.com/Xp18V">PODCAST</a>. </p>            
         </div>
         <div class="Video">
-          <img src="images/placeholder.jpeg" />
+          <img src="images/placeholder.jpeg" alt="Picture of Placeholder" />
           <h2>Video</h2>
           <p class="description">
             This is the placeholder for the video.</p>
