--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
       </main>
 
       <footer>
+        <div>
+          <p class="copyright">© Torrin Conrath 2023</p>
+        </div>
       </footer>
 
     </div>
