--- a/index.html
+++ b/index.html
@@ -39,16 +39,16 @@
           <p class="description">Are you looking for some discussions? Then check out my podcast where you discuss Spongebob's influence on both us and adult cartoons! <a href="https://on.soundcloud.com/Xp18V">PODCAST</a>. </p>            
         </div>
         <div class="project">
-          <img src="images/pork.jpeg" alt="Picture of Braised Pork Belly" />
+          <img src="images/pork.png" alt="Picture of Braised Pork Belly" />
           <h2>Video</h2>
           <p class="description">
-            Hungry yet? You have to check how to make some bomb food, like this braised pork belly!</p>
+            Hungry yet? You have to check how to make some bomb food, like this <a href="https://youtu.be/VyhohM0KmfY">braised pork belly</a>!</p>
         </div>
         <div class="project">
-          <img src="images/pork.jpeg" alt="Picture of Braised Pork Belly" />
+          <img src="images/game.png" alt="Picture of an 8-bit Video Game" />
           <h2>Video</h2>
           <p class="description">
-            Hungry yet? You have to check how to make some bomb food, like this braised pork belly!</p>
+            How about a frustrating video game? I'm working on developing a game and you can test its design in the <a href= "executable">pre-alpha stage</a>. Just move with WASD and shoot with the arrow keys. Sorry next patch it will be more user-friendly.</p>
         </div>
       </main>
 
