--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </div>
         <div class="project">
           <img src="images/game.png" alt="Picture of an 8-bit Video Game" />
-          <h2>Video</h2>
+          <h2>Video Game</h2>
           <p class="description">
             How about a frustrating video game? I'm working on developing a game and you can test its design in the <a href="executable/pygame_proto.exe">pre-alpha stage</a>. Just move with WASD and shoot with the arrow keys. Sorry next patch it will be more user-friendly.</p>
         </div>
