--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
         <div class="project">
           <img src="images/xavier_picture.jpg" alt="Picture of Xavier" />
           <h2>A Secret Gem of a Show: Xavier: Renegade Angel</h2>
-          <p class="description">Are you looking for the next show to watch? Then let's learn about how good XRA is! <a href="https://medium.com/@torrin_37492/a-secret-gem-of-a-show-xavier-renegade-angel-c263d4c6277b">POST</a>. </p>            
+          <p class="description">Are you looking for the next show to watch? Then let's learn about <a href="https://medium.com/@torrin_37492/a-secret-gem-of-a-show-xavier-renegade-angel-c263d4c6277b">how good XRA is</a>! </p>            
         </div>
         <div class="project">
           <img src="images/spongebob.jpg" alt="Picture of Spongebob" />
           <h2>ENGL Panthers - Podcast</h2>
-          <p class="description">Are you looking for some discussions? Then check out my podcast where you discuss Spongebob's influence on both us and adult cartoons! <a href="https://on.soundcloud.com/Xp18V">PODCAST</a>. </p>            
+          <p class="description">Are you looking for some discussions? Then check out my podcast where we discussed <a href="https://on.soundcloud.com/Xp18V">Spongebob's influence</a> on both us and adult cartoons as a whole!</p>            
         </div>
         <div class="project">
           <img src="images/pork.png" alt="Picture of Braised Pork Belly" />
