--- a/index.html
+++ b/index.html
@@ -48,10 +48,7 @@
           <img src="images/game.png" alt="Picture of an 8-bit Video Game" />
           <h2>Video Game</h2>
           <p class="description">
-            How about a frustrating video game? I'm working on developing a game and you can test its design in the <span>
-            <a href="executable/pygame_proto.exe">pre-alpha stage</a>
-            <a href= "executable/images/">image folder</a>
-          </span>. Just move with WASD and shoot with the arrow keys. Next patch will be more user-friendly.</p>
+            How about a frustrating video game? I'm working on developing a game and you can test its design in the <a href="game/"></a>. Just move with WASD and shoot with the arrow keys. Next patch will be more user-friendly.</p>
         </div>
       </main>
 
