--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <img src="images/game.png" alt="Picture of an 8-bit Video Game" />
           <h2>Video Game</h2>
           <p class="description">
-            How about a frustrating video game? I'm working on developing a game and you can test its design in the <a href="game/"></a>. Just move with WASD and shoot with the arrow keys. Next patch will be more user-friendly.</p>
+            How about a frustrating video game? I'm working on developing a game and you can test its design in the <a href="game/">pre-alpha stage</a>. Just move with WASD and shoot with the arrow keys. Next patch will be more user-friendly.</p>
         </div>
       </main>
 
