--- a/index.html
+++ b/index.html
@@ -34,18 +34,18 @@
         </div>
         <div class="project">
           <img src="images/spongebob.jpg" alt="Picture of Spongebob" />
-          <h2>ENGL Panthers - Podcast</h2>
+          <h2>ENGL 3844 Panthers - Podcast</h2>
           <p class="description">Are you looking for some discussions? Then check out my podcast where we discussed <a href="https://on.soundcloud.com/Xp18V">Spongebob's influence</a> on both us and adult cartoons as a whole!</p>            
         </div>
         <div class="project">
           <img src="images/pork.png" alt="Picture of Braised Pork Belly" />
-          <h2>Video</h2>
+          <h2>Let's Make Braised Pork Belly!</h2>
           <p class="description">
             Hungry yet? You have to check how to make some bomb food, like this <a href="https://youtu.be/VyhohM0KmfY">braised pork belly</a>!</p>
         </div>
         <div class="project">
           <img src="images/game.png" alt="Picture of an 8-bit Video Game" />
-          <h2>Video Game</h2>
+          <h2>8-bit Video Game Demo</h2>
           <p class="description">
             How about a frustrating video game? I'm working on developing a game and you can play the <a href="game/game.zip">beta version 1.1</a>. Just move with WASD and shoot with the arrow keys.</p>
         </div>
