--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </div>
         <div class="project">
           <img src="images/game.png" alt="Picture of an 8-bit Video Game" />
-          <h2>8-bit Video Game Demo</h2>
+          <h2>Video Game Demo</h2>
           <p class="description">
             How about a frustrating video game? I'm working on developing a game and you can play the <a href="game/game.zip">beta version 1.1</a>. Just move with WASD and shoot with the arrow keys.</p>
         </div>
