--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           <img src="images/game.png" alt="Picture of an 8-bit Video Game" />
           <h2>Video Game Demo</h2>
           <p class="description">
-            How about a frustrating video game? I'm working on developing a game and you can play the <a href="game/agentsvsghosts_game.zip">version 1.0</a>. Just move with WASD and shoot with the arrow keys.</p>
+            How about a frustrating video game? I'm working on developing a game and you can play the <a href="game/agentvsghosts.zip">version 1.0</a>. Just unzip the file and locate the executable. To play, move with WASD and shoot with the arrow keys.</p>
         </div>
       </main>
 
