--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <header>
         <div class="wrapper">
           <h1>Torrin Conrath</h1>
-            <p class="bio"> Hello I'm Torrin Conrath! These are my assignments for ENGL 3844! Check them out!
+            <p class="bio"> Hello I'm Torrin Conrath! These are my current projects!
             </p>
           <div class="buttonBox">
             <a class="myButton" href="#projects">Go</a>
@@ -27,22 +27,6 @@
       </header>
 
       <main id="projects">
-        <div class="project">
-          <img src="images/xavier_picture.jpg" alt="Picture of Xavier" />
-          <h2>A Secret Gem of a Show: Xavier: Renegade Angel</h2>
-          <p class="description">Are you looking for the next show to watch? Then let's learn about <a href="https://medium.com/@torrin_37492/a-secret-gem-of-a-show-xavier-renegade-angel-c263d4c6277b">how good XRA is</a>! </p>            
-        </div>
-        <div class="project">
-          <img src="images/spongebob.jpg" alt="Picture of Spongebob" />
-          <h2>ENGL 3844 Panthers - Podcast</h2>
-          <p class="description">Are you looking for some discussions? Then check out my podcast where we discussed <a href="https://on.soundcloud.com/Xp18V">Spongebob's influence</a> on both us and adult cartoons as a whole!</p>            
-        </div>
-        <div class="project">
-          <img src="images/pork.png" alt="Picture of Braised Pork Belly" />
-          <h2>Let's Make Braised Pork Belly!</h2>
-          <p class="description">
-            Hungry yet? You have to check how to make some bomb food, like this <a href="https://youtu.be/VyhohM0KmfY">braised pork belly</a>!</p>
-        </div>
         <div class="project">
           <img src="images/ghost_game.png" alt="Picture of an 8-bit Video Game" />
           <h2>Video Game Demo: AGENT V.S. GHOSTS</h2>
