--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <img src="images/ghost_game.png" alt="Picture of an 8-bit Video Game" />
           <h2>Video Game Demo: AGENT V.S. GHOSTS</h2>
           <p class="description">
-            How about a frustrating video game? I'm working on developing a game and you can play the <a href="game/agentvsghosts.zip">version 1.0</a>. Just unzip the file and locate the executable. To play, move with WASD and shoot with the arrow keys.</p>
+            How about a frustrating video game? How about you try <a href="game/agentvsghosts.zip">AGENTS V.S. GHOSTS (version 1.0)</a>. Just unzip the file and locate the executable. To play, move with WASD and shoot with the arrow keys.</p>
         </div>
       </main>
 
