--- a/index.html
+++ b/index.html
@@ -28,12 +28,14 @@
 
       <main id="projects">
         <div class="project">
-          <img src="images/ghost_game.png" alt="Picture of an 8-bit Video Game" />
+          <img src="web_images/ghost_game.png" alt="Picture of an 8-bit Video Game" />
           <h2>Video Game Demo: AGENT V.S. GHOSTS</h2>
           <p class="description">
-            How about a frustrating video game? How about you try <a href="game/agentvsghosts.zip">AGENTS V.S. GHOSTS</a>! Just unzip the file and locate the executable. To play, move with WASD and shoot with the arrow keys.</p>
+            How about a frustrating video game? How about you try <a href="./game_page.html">AGENTS V.S. GHOSTS</a>! Just unzip the file and locate the executable. To play, move with WASD and shoot with the arrow keys.</p>
         </div>
       </main>
+
+
 
       <footer>
         <div>
