--- a/game_page.html
+++ b/game_page.html
@@ -4,18 +4,16 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <title>AGENT V.S. GHOSTS</title>
+  <!-- Include Brython -->
+  <script type="text/javascript" src="path/to/brython.js"></script>
 </head>
 <body>
-    <h2>Video Game Demo: AGENT V.S. GHOSTS</h2>
-  <!-- Include your separate Python file -->
-  <!-- <script type="text/python" src="path/to/game_logic.py"></script>
+  <h2>Video Game Demo: AGENT V.S. GHOSTS</h2>
+  <!-- Include your Brython-converted Pygame script -->
+  <script type="text/python" src="path/to/agentvsghosts.py"></script>
   <script>
     // Run the Brython script to start the game
-    run_game();
-  </script> -->
-
-
-
-
+    brython_run_script();
+  </script>
 </body>
 </html>
