--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <img src="web_images/ghost_game.png" alt="Picture of an 8-bit Video Game" />
           <h2>Video Game Demo: AGENT V.S. GHOSTS</h2>
           <p class="description">
-            How about a frustrating video game? How about you try <a href="templates/game_page.html">AGENTS V.S. GHOSTS</a>! To play, move with WASD and shoot with the arrow keys.</p>
+            How about a frustrating video game? How about you try <a href="content/game_page.html">AGENTS V.S. GHOSTS</a>! To play, move with WASD and shoot with the arrow keys.</p>
         </div>
       </main>
 
