--- a/index.html
+++ b/index.html
@@ -33,6 +33,12 @@
           <p class="description">
             How about a frustrating video game? How about you try <a href="content/game_page.html">AGENTS V.S. GHOSTS</a>! To play, move with WASD and shoot with the arrow keys.</p>
         </div>
+        <div class="project">
+          <img src="web_images/github.png" alt="Picture of a Github Page" />
+          <h2>Github Page</h2>
+          <p class="description">
+            Check out my <a href="content/game_page.html">Github</a> to see additional projects.</p>
+        </div>
       </main>
 
 
