--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           <img src="web_images/github.png" alt="Picture of a Github Page" />
           <h2>Github Page</h2>
           <p class="description">
-            Check out my <a href="content/game_page.html">Github</a> to see additional projects.</p>
+            Check out my <a href="https://github.com/torrinconrath">Github</a> to see additional projects.</p>
         </div>
       </main>
 
