--- a/content/game_page.html
+++ b/content/game_page.html
@@ -6,20 +6,21 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <title>AGENT V.S. GHOSTS</title>
 
-  <!-- Include Pyodide -->
-  <script src="https://cdn.jsdelivr.net/pyodide/v0.17.0/full/pyodide.js"></script>
+  <!-- Include Brython -->
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/brython/3.10.5/brython.js"></script>
 </head>
-<body>
+<body onload="brython()">
   <h2>Video Game Demo: AGENT V.S. GHOSTS</h2>
   <button id="launchButton">Launch Game</button>
 
-  <script>
-    document.getElementById('launchButton').addEventListener('click', function() {
-      // Initialize Pyodide
-      pyodide.runPythonAsync(`
+  <script type="text/python">
+    from browser import document, alert
+
+    def launch_game(ev):
         result = "Game launched successfully!"
-      `).then(data => alert(data.result));
-    });
+        alert(result)
+
+    document.getElementById('launchButton').bind('click', launch_game)
   </script>
 </body>
 </html>
