--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
+<!-- index.html -->
 <!DOCTYPE html>
 <html>
-
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
@@ -12,9 +12,7 @@
   </head>
 
   <body>
-
     <div class="container">
-
       <header>
         <div class="wrapper">
           <h1>Torrin Conrath</h1>
@@ -31,7 +29,7 @@
           <img src="web_images/ghost_game.png" alt="Picture of an 8-bit Video Game" />
           <h2>Video Game Demo: AGENT V.S. GHOSTS</h2>
           <p class="description">
-            How about a frustrating video game? How about you try <a href="content/game_page.html">AGENTS V.S. GHOSTS</a>! To play, move with WASD and shoot with the arrow keys.</p>
+            How about a frustrating video game? How about you try <a href="game_page.html">AGENTS V.S. GHOSTS</a>! To play, move with WASD and shoot with the arrow keys.</p>
         </div>
         <div class="project">
           <img src="web_images/github.png" alt="Picture of a Github Page" />
