--- a/game_page.html
+++ b/game_page.html
@@ -13,13 +13,13 @@
 
 <body>
   <h2>Video Game Demo: AGENT V.S. GHOSTS</h2>
-  <a id="downloadLink" href="#" download="game_launcher.exe">
+  <a id="downloadLink" href="#" download="agentvsghosts.exe">
     <button id="downloadButton">Download Game</button>
   </a>
   <script>
     // Change the href attribute when the button is clicked
     document.getElementById('downloadButton').addEventListener('click', function() {
-      document.getElementById('downloadLink').href = 'path/to/your/dist/launcher.exe'; // Update with the correct path
+      document.getElementById('downloadLink').href = 'game/AgentVsGhosts.exe'; // Update with the correct path
     });
   </script>
 </body>
