final style changes

--- a/game_page.html
+++ b/game_page.html
@@ -16,6 +16,9 @@
   <a id="downloadLink" href="#" download="agentvsghosts.exe">
     <button id="downloadButton">Download Game</button>
   </a>
+  <div class="image-container">
+    <img src="web_images/gameplay_sc.png" alt="Game Image" class="game-image">
+  </div>
   <script>
     // Change the href attribute when the button is clicked
     document.getElementById('downloadButton').addEventListener('click', function() {
