--- a/game_page.html
+++ b/game_page.html
@@ -20,7 +20,7 @@
     <img src="web_images/gameplay_sc.png" alt="Game Image" class="game-image">
   </div>
   <script>
-    // Change the href attribute when the button is clicked
+    // Change the href attribute when the button is clicked for the download
     document.getElementById('downloadButton').addEventListener('click', function() {
       document.getElementById('downloadLink').href = 'game/AgentVsGhosts.exe'; // Update with the correct path
     });
