--- a/game_page.html
+++ b/game_page.html
@@ -18,6 +18,9 @@
   </a>
   <div class="image-container">
     <img src="web_images/gameplay_sc.png" alt="Game Image" class="game-image">
+    <body>
+      <p>Hello, thank you for checking out my game! So how do you play?</p>
+    </body>
   </div>
   <script>
     // Change the href attribute when the button is clicked for the download
