game page changes final

--- a/game_page.html
+++ b/game_page.html
@@ -18,9 +18,28 @@
   </a>
   <div class="image-container">
     <img src="web_images/gameplay_sc.png" alt="Game Image" class="game-image">
-    <body>
-      <p>Hello, thank you for checking out my game! So how do you play?</p>
-    </body>
+    <div class="instructions-container">
+      <h3>How to Play?</h3>
+      <p>Throughout this game, you will need to dodge and shoot the incoming ghosts. You move around with WASD and shoot with the arrow keys. 
+        You have three hearts meaning you can get hit three times before the game is over.
+        As time goes on, the ghosts will spawn faster and faster until it is impossible to continue.
+      </p>
+      <h3>Powerups</h3>
+      <p>There will be five different powerups that can spawn throughout the game which can be used to your advantage.
+        One of these will spawn every ten seconds, randomly on the map. They need to be collected in order to use them.
+      </p>
+      <ul>
+        <li><img src="game_images/lightning.png" alt="Lightning Icon" class="list-icon">Lightning: The player doubles their speed.</li>
+        <li><img src="game_images/cannon.png" alt="Cannon Icon" class="list-icon">Cannon: No matter which arrow key the player clicks, 
+          it will shoot bullets in all four directions.</li>
+        <li><img src="game_images/bomb.png" alt="Bomb Icon" class="list-icon">Bomb: A bomb will start counting down and after five 
+          seconds will wipe all the ghosts on the map.</li>
+        <li><img src="game_images/poison.png" alt="Poison Icon" class="list-icon">Infection: When the player shoots the enemy, it will 
+          spawn a zombie at the previously killed enemy's place. It will act as a dummy drawing some of the ghosts' attention to it.</li>
+        <li><img src="game_images/barrier.png" alt="Barrier Icon" class="list-icon">Shield: The player will gain a shield which can 
+          absorb a hit.</li>
+      </ul>
+    </div>
   </div>
   <script>
     // Change the href attribute when the button is clicked for the download
