--- a/index.html
+++ b/index.html
@@ -29,7 +29,13 @@
           <img src="web_images/ghost_game.png" alt="Picture of an 8-bit Video Game" />
           <h2>Video Game Demo: AGENT V.S. GHOSTS</h2>
           <p class="description">
-            How about a frustrating video game? How about you try <a href="game_page.html">AGENTS V.S. GHOSTS</a>! To play, move with WASD and shoot with the arrow keys.</p>
+            How about a frustrating video game? How about you try <a href="game_page.html">AGENTS V.S. GHOSTS</a>!</p>
+        </div>
+        <div class="project">
+          <img src="web_images/map.png" alt="Picture of a Github Page" />
+          <h2>React Webpage with Google Maps Integration</h2>
+          <p class="description">
+            This is my <a href="https://github.com/torrinconrath/reacting-to-maps">React Webpage</a> with Google Maps integration. !!WORK IN PROGRESS!!</p>
         </div>
         <div class="project">
           <img src="web_images/github.png" alt="Picture of a Github Page" />
