--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <img src="web_images/map.png" alt="Picture of a Github Page" />
           <h2>React Webpage with Google Maps Integration</h2>
           <p class="description">
-            This is my <a href="https://github.com/torrinconrath/reacting-to-maps">React Webpage</a> with Google Maps integration. !!WORK IN PROGRESS!!</p>
+            This is my <a href="https://github.com/torrinconrath/reacting-to-maps">React Webpage</a> with Google Maps integration.</p>
         </div>
         <div class="project">
           <img src="web_images/github.png" alt="Picture of a Github Page" />
@@ -44,7 +44,6 @@
             Check out my <a href="https://github.com/torrinconrath">Github</a> to see additional projects.</p>
         </div>
       </main>
-
 
 
       <footer>
