adding kanban board

--- a/game_page.html
+++ b/game_page.html
@@ -19,7 +19,7 @@
   <div class="image-container">
     <img src="web_images/gameplay_sc.png" alt="Game Image" class="game-image">
     <div class="instructions-container">
-      <h3>How to Play?</h3>
+      <h2>How to Play?</h2>
       <p>Throughout this game, you will need to dodge and shoot the incoming ghosts. You move around with WASD and shoot with the arrow keys. 
         You have three hearts meaning you can get hit three times before the game is over.
         As time goes on, the ghosts will spawn faster and faster until it is impossible to continue.
@@ -38,6 +38,11 @@
           spawn a zombie at the previously killed enemy's place. It will act as a dummy drawing some of the ghosts' attention to it.</li>
         <li><img src="game_images/barrier.png" alt="Barrier Icon" class="list-icon">Shield: The player will gain a shield which can 
           absorb a hit.</li>
+        <li><img src="game_images/star.png" alt="Star Icon" class="list-icon">Star: The player turn into a saiyan becoming invincible, 
+          doubling their speed, and shooting gold bullets in all directions.</li>
+        <li><img src="game_images/honey.png" alt="Honey Icon" class="list-icon">Honey: The enemies will have their speeds cut in half.</li>
+        <li><img src="game_images/firecracker_u.png" alt="Firecracker Icon" class="list-icon">Firecracker: The player will shoot rockets,
+          which will explode when in proximity with an enemy.</li>
       </ul>
     </div>
   </div>
