--- a/index.html
+++ b/index.html
@@ -38,6 +38,12 @@
             This is my <a href="https://github.com/torrinconrath/reacting-to-maps">React Webpage</a> with Google Maps integration.</p>
         </div>
         <div class="project">
+          <img src="" alt="" />
+          <h2>Canvas Kanban Board for CS 3704</h2>
+          <p class="description">
+            This is my <a href="kanban.html">Canvas Kanban Board</a>.</p>
+        </div>
+        <div class="project">
           <img src="web_images/github.png" alt="Picture of a Github Page" />
           <h2>Github Page</h2>
           <p class="description">
