--- a/kanban.html
+++ b/kanban.html
@@ -8,6 +8,6 @@
 <body>
 	<div class="kanban">
 	</div>
-	<script src="js/main.js" type="module"></script>
+	<script src="kanban/main.js" type="module"></script>
 </body>
 </html>
