--- a/kanban.html
+++ b/kanban.html
@@ -5,11 +5,41 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Kanban Board</title>
+	<link rel="preconnect" href="https://fonts.googleapis.com" />
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+	<link href="https://fonts.googleapis.com/css2?family=EG+Garamond:wght@400;500;600;700&family=Fira+Sans:wght@400;500;600;700&display=swap" rel="stylesheet" />
 	<link rel="stylesheet" href="css/kanban.css">
 </head>
 <body>
 	<div class="kanban">
 	</div>
 	<script src="kanban/main.js" type="module"></script>
+
+	<div class="pomo-container">
+		<h1>Pomodoro</h1>
+		<input type="number" class="minute-input" max="60" min="1" placeholder="Enter">
+		<div class="pomo-message">Press Play to Begin</div>
+		<div class="pomo-circle">
+		  <div class="circle-shape">
+			<div class="semi-circle right-side circle-mask"></div>
+			<div class="semi-circle right-side circle"></div>
+			<div class="semi-circle left-side circle-mask"></div>
+			<div class="semi-circle left-side circle"></div>
+		  </div>
+		  <div class="pomo-counter-box">
+			<p><span class="minutes">00</span>:<span class="seconds">00</span></p>
+		  </div>
+		  <button class="btn-play" data-duration="0">Play</button>
+		  <button class="btn-pause">Pause</button>
+		  <button class="btn-reset">Reset</button>
+		</div>
+	  
+		<p></p>
+		<video controls loop width="228" height="640">
+		  <source src="video/surfer.mp4" type="video/mp4">
+		  Your browser does not support the video tag.
+		</video>
+	  </div>
 </body>
+<script src="kanban/pomo.js"></script> 
 </html>
