--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             This is my <a href="https://github.com/torrinconrath/reacting-to-maps">React Webpage</a> with Google Maps integration.</p>
         </div>
         <div class="project">
-          <img src="" alt="" />
+          <img src="web_images/kanban.png" alt="Picture of a Kanban Board" />
           <h2>Canvas Kanban Board for CS 3704</h2>
           <p class="description">
             This is my <a href="kanban.html">Canvas Kanban Board</a>.</p>
