updated the game to 1.2 from Feb update

--- a/game_page.html
+++ b/game_page.html
@@ -25,7 +25,7 @@
         As time goes on, the ghosts will spawn faster and faster until it is impossible to continue.
       </p>
       <h3>Powerups</h3>
-      <p>There will be five different powerups that can spawn throughout the game which can be used to your advantage.
+      <p>There will be eight different powerups that can spawn throughout the game which can be used to your advantage.
         One of these will spawn every ten seconds, randomly on the map. They need to be collected in order to use them.
       </p>
       <ul>
